PamAuthenticator: Emit failed on authentication attempts that happen too soon

In cases where authentication attempt happens too soon, such
as when user presses esc right after inserting wrong password,
we need to emit the failed signal to set the state from
being stuck in Authenticating to Failed.

BUG: 515299